[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.5.3"
reqwest = { version = "0.11.18", features = ["cookies"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "net", "time"] }
clap = { version = "4.3.19", features = ["derive"] }
anyhow = "1.0.72"
scraper = "0.17.1"
chrono = "0.4.26"