[package]
name = "netaccess"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.5.3"
reqwest = { version = "0.11.18", features = ["cookies"] }
tokio = { version = "1.29.1", features = ["macros", "rt"] }
clap = { version = "4.3.19", features = ["derive"] }
anyhow = "1.0.72"
scraper = "0.17.1"
chrono = "0.4.26"
rpassword = "7.2.0"
thiserror = "1.0.44"

[target.'cfg(unix)'.dependencies]
directories = "5.0.1"
